--- a/service/src/main/webapp/assets/css/base.css
+++ b/service/src/main/webapp/assets/css/base.css
@@ -87,12 +87,12 @@ h2{
 
 .column-delta{
     margin-lefth: 85%;
-    width: 15%;:w
+    width: 15%;
 
 }
 
 .top{
-    background-color: #FFAF00
+    background-color: #FFAF00;
     margin-left: 0px;
     margin-top: 0px;
 }
