Password reset page and all OM and DT stuff.

--- a/service/src/main/webapp/assets/css/base.css
+++ b/service/src/main/webapp/assets/css/base.css
@@ -40,6 +40,10 @@ button.button-extra-large{
     height: 10%;
 }
 
+li{
+    font: 20px Verdana, sans-serif;
+}
+
 a{
     font: 20px Verdana, sans-serif;
 }
